<resources>
    <string name="app_name">TourMate</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signed_up_activity_title">Home</string>
    <string name="login_title">Log In</string>
    <string name="register_title">Register</string>
    <string name="no_account_message">Don\'t have an account?\n</string>
    <string name="create_account">Create Account</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_updated_main_menu">UpdatedMainMenuActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_nearby">Nearby</string>
    <string name="title_maps">Map</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_memories">Memories</string>
    <string name="delete_text">X</string>
    <string name="city_country">Enugu, Nigeria</string>
    <string name="date_today">Friday, 8 July</string>
    <string name="current_temperature">26</string>
    <string name="weather_information">Partly Cloud</string>
    <string name="temp_information">26, partly cloudy</string>
    <string name="wind">WIND</string>
    <string name="wind_speed">18 km/h</string>
    <string name="humidity_rate">73%</string>
    <string name="day_of_week">Mon</string>
    <string name="location_hints">Type city or postcode</string>
    <string name="location_example">Example Malmo, Sweden</string>
    <string name="add_new_location">Add new location</string>
    <string name="stored_location">You can only store 5 locations</string>
    <string name="permission_notice">This permission is important but you can as well set your location on Location page</string>
    <string name="go_to_location">Go to location setting</string>
    <string name="snow_">Snow : %1$.2f %2$s</string>
    <string name="humidity">Humidity : %d %%</string>
    <string name="pressure">Pressure : %.2f hPa</string>

    <string name="wind_">Wind : %1$.2f %2$s</string>

    <string name="wind_blowing_in">Wind Blowing towards %s</string>
    <string name="north">North</string>
    <string name="north_east">North-East</string>
    <string name="north_west">North-West</string>
    <string name="south">South</string>
    <string name="south_east">South-East</string>
    <string name="south_west">South-West</string>
    <string name="east">East</string>
    <string name="west">West</string>

    <string name="home">Home</string>
    <string name="nearby">Nearby</string>
    <string name="profile">Profile</string>
    <string name="memories">Memories</string>
    <string name="weather">Weather</string>

    <string name="welcome">Welcome to Tour Mate</string>
    <string name="sub_heading">My Custom Heading</string>
    <string name="user_email">Email</string>
    <string name="user_name">User Name</string>
    <string name="user_password">Password</string>
    <string name="user_login">Login</string>
    <string name="user_register">Sign Up</string>
    <string name="no_account">Don\'t have an account? Sign Up</string>
    <string name="have_account">Already have an account? Sign In</string>
    <string name="sign_up">Sign Up</string>

    <string name="email_error">This field is mandatory</string>
    <string name="email_invalid">Invalid email format</string>
    <string name="sign_in">Sign In</string>
    <string name="user_confirm_password">Confirm Password</string>

    <string name="validating">Validating Information…</string>
    <string name="passwords_dont_match">Passwords do not match</string>
    <string name="password_length_error">Password must be at least 6 character long</string>

    <string name="event_title">Event Title</string>
    <string name="event_description">Short Description</string>
    <string name="event_start">Start Date</string>
    <string name="event_end">End Date</string>

</resources>
